# shortcut-obs-displayer

./: .gitignore  CMakeLists.txt  README.md  main.c
cmake/: FindLIBEVDEV.cmake
obsBrowserPage/: index.html  index.js  index.ts  package-lock.json  package.json  shortcut
